--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   <title>Sistema Hotelero WEB</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="../src/css/bootstrap.min.css" rel="stylesheet">
+  <link href="src/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
-  <link href="../src/css/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+  <link href="src/css/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
 
-  <link href="../src/css/Index.css" rel="stylesheet">
+  <link href="src/css/Index.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -73,25 +73,25 @@
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="img/holidayinNoche.jpg" alt="First slide">
+            <img class="d-block w-100" src="templates/img/holidayinNoche.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinPileta5.jpg" alt="Second slide">
+            <img class="d-block w-100" src="templates/img/holidayinPileta5.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinInterior.jpg" alt="Third slide">
+            <img class="d-block w-100" src="templates/img/holidayinInterior.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinRestaurante.jpg" alt="4 slide">
+            <img class="d-block w-100" src="templates/img/holidayinRestaurante.jpg" alt="4 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinFuera.jpg" alt="5 slide">
+            <img class="d-block w-100" src="templates/img/holidayinFuera.jpg" alt="5 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinPieza.jpg" alt="6 slide">
+            <img class="d-block w-100" src="templates/img/holidayinPieza.jpg" alt="6 slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="img/holidayinRestaurante2.jpg" alt="7 slide">
+            <img class="d-block w-100" src="templates/img/holidayinRestaurante2.jpg" alt="7 slide">
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
       <div class="col-lg-8 mx-auto">
         <h2>Check-In</h2>
         <p class="abajotext">Introduce tus datos, elije el tipo de habitacion, la cantidad de personas y los dias de estadia</p>
-        <input type="button" class="btn btn-default btn-lg" value="Ingresar al hotel" onclick="location='DatosCliente.html'">
+        <input type="button" class="btn btn-default btn-lg" value="Ingresar al hotel" onclick="location='templates/DatosCliente.html'">
       </div>
     </div>
   </section>
@@ -160,8 +160,8 @@
 
   <!-- Bootstrap core JavaScript -->
 
-  <script src="../src/js/jquery.min.js"></script>
-  <script src="../src/js/bootstrap.bundle.min.js"></script>
+  <script src="src/js/jquery.min.js"></script>
+  <script src="src/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
 
@@ -170,7 +170,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="../src/js/functions.js"></script>
+  <script src="src/js/functions.js"></script>
 
 </body>
 
